--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,7 @@
     "default_title": "SwiftPath - Navigate to saved paths",
     "default_icon": {
       "16": "icons/icon-16.png",
+      "24": "icons/icon-24.png",
       "32": "icons/icon-32.png",
       "48": "icons/icon-48.png",
       "128": "icons/icon-128.png"
@@ -38,6 +39,7 @@
   
   "icons": {
     "16": "icons/icon-16.png",
+    "24": "icons/icon-24.png",
     "32": "icons/icon-32.png",
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
