Update Privacy Policy date, refine README, enhance popup styles, and improve path item display

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,10 @@
   "name": "SwiftPath",
   "version": "1.0.0",
   "description": "Bookmark and quickly navigate to paths across different domains. Perfect for developers and admins managing multiple sites.",
-  
+  "homepage_url": "https://github.com/Rohith24/SwiftPath",
+  "author": "Rohith Challa",
+  "short_name": "SwiftPath",
+
   "permissions": [
     "storage",
     "activeTab"
